// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay [common] example testing should match snapshot(s) for basic 1`] = `
<Portal
  portalId="1-Overlay-Portal-8"
>
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={300}
    transitionLeave={true}
    transitionLeaveTimeout={300}
    transitionName="lucid-Overlay"
  />
</Portal>
`;

exports[`Overlay [common] example testing should match snapshot(s) for no-modal 1`] = `
<Portal
  portalId="1-Overlay-Portal-9"
>
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={300}
    transitionLeave={true}
    transitionLeaveTimeout={300}
    transitionName="lucid-Overlay"
  />
</Portal>
`;

exports[`Overlay should render with isAnimated=false 1`] = `
<Portal
  portalId="1-Overlay-Portal-13"
/>
`;
